v26.2 ready BTC network optimizations